--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "trailsjs"
   ],
   "dependencies": {
+    "sails-postgresql": "^0.11.4",
     "trailpack-core": "^1.0.0-beta-3",
     "trailpack-footprints": "^1.0.1",
     "trailpack-hapi": "^1.0.2",
